initial support for AWS Glue database and table resources.
This does not include partition management.

Minor refactoring.